docs: add documentation for list Opening
